tests/e2e/semantics/assignment_object_index_var_invalid.error
Error: syntax error in story at line 3, column 1

3|    a[i] = 2
      ^^^

E0104: `Map[string,int]` can't be indexed with `i` of type `boolean`
