tests/e2e/semantics/assignment_object_index_var_invalid.story
a = {"foo": 1}
i = true
a[i] = 2
